--- a/frontend-application/package.json
+++ b/frontend-application/package.json
@@ -10,9 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@mui/x-date-pickers": "^8.11.3",
+    "@mui/x-date-pickers-pro": "^8.11.3",
+    "chart.js": "^4.5.0",
+    "dayjs": "^1.11.18",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
