--- a/frontend-application/package.json
+++ b/frontend-application/package.json
@@ -17,12 +17,14 @@
     "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.11.3",
     "@mui/x-date-pickers-pro": "^8.11.3",
+    "@reduxjs/toolkit": "^2.9.0",
     "chart.js": "^4.5.0",
     "dayjs": "^1.11.18",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.2",
     "recharts": "^3.2.1"
   },
